fix paddings and gaps no mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   box-sizing: border-box; /* Adiciona box-sizing para garantir que padding e border não alterem a largura total */
 }
 
@@ -78,4 +78,23 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+@media screen and (min-width: 2560px) {
+
+}
+
+@media screen and (min-width: 1366px) and (max-width: 2559px) {
+
+}
+
+@media screen and (min-width: 960px) and (max-width: 1365px){
+  #root {
+    padding: 2rem;
+  }
+}
+
+@media screen and (min-width: 375px) and (max-width: 959px){
+
 }
